--- a/package.json
+++ b/package.json
@@ -7,16 +7,36 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "@mdi/font": "5.9.55",
+    "axios": "^1.3.4",
+    "core-js": "^3.8.3",
+    "element-plus": "^2.2.32",
+    "jquery": "^3.6.4",
+    "markdown-it": "^13.0.1",
+    "mavon-editor": "^3.0.1",
+    "recorderx": "^2.0.2",
+    "roboto-fontface": "*",
     "vue": "^3.2.13",
+    "vue-danmaku": "^1.7.0",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vue3-barrage": "^0.3.2",
+    "vuetify": "^3.0.0-beta.0",
+    "vuex": "^4.0.0",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
+    "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "easy-typer-js": "^2.1.0",
     "less": "^4.0.0",
-    "less-loader": "^8.0.0"
+    "less-loader": "^8.0.0",
+    "stylus": "^0.59.0",
+    "stylus-loader": "^7.1.0",
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   },
   "browserslist": [
     "> 1%",
