--- a/package.json
+++ b/package.json
@@ -10,13 +10,26 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@mdi/font": "5.9.55",
     "axios": "^1.6.7",
+    "clipboard": "^2.0.11",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.32",
+    "highlight.js": "^11.9.0",
     "jquery": "^3.6.4",
     "markdown-it": "^13.0.1",
-    "mavon-editor": "^3.0.1",
+    "markdown-it-abbr": "^2.0.0",
+    "markdown-it-container": "^4.0.0",
+    "markdown-it-deflist": "^3.0.0",
+    "markdown-it-emoji": "^3.0.0",
+    "markdown-it-footnote": "^4.0.0",
+    "markdown-it-ins": "^4.0.0",
+    "markdown-it-katex-external": "^1.0.0",
+    "markdown-it-mark": "^4.0.0",
+    "markdown-it-sub": "^2.0.0",
+    "markdown-it-sup": "^2.0.0",
+    "markdown-it-task-lists": "^2.1.1",
     "recorderx": "^2.0.2",
     "roboto-fontface": "*",
+    "tocbot": "^4.25.0",
     "vue": "^3.2.13",
     "vue-danmaku": "^1.7.0",
     "vue-router": "^4.0.3",
@@ -33,6 +46,9 @@
     "easy-typer-js": "^2.1.0",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
+    "markdown-it": "^13.0.1",
+    "sass": "1.32.13",
+    "sass-loader": "10.1.1",
     "stylus": "^0.59.0",
     "stylus-loader": "^7.1.0",
     "vue-cli-plugin-vuetify": "~2.5.8",
