--- a/package.json
+++ b/package.json
@@ -10,30 +10,40 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@mdi/font": "5.9.55",
     "axios": "^1.6.7",
-    "clipboard": "^2.0.11",
-    "core-js": "^3.8.3",
+    "clipboard": "^2.0.6",
+    "core-js": "^3.6.4",
+    "easy-typer-js": "^2.1.0",
     "element-plus": "^2.2.32",
-    "highlight.js": "^11.9.0",
+    "highlight.js": "^10.7.3",
     "jquery": "^3.6.4",
-    "markdown-it": "^13.0.1",
-    "markdown-it-abbr": "^2.0.0",
-    "markdown-it-container": "^4.0.0",
-    "markdown-it-deflist": "^3.0.0",
-    "markdown-it-emoji": "^3.0.0",
-    "markdown-it-footnote": "^4.0.0",
-    "markdown-it-ins": "^4.0.0",
+    "markdown-it": "^11.0.1",
+    "markdown-it-abbr": "^1.0.4",
+    "markdown-it-container": "^3.0.0",
+    "markdown-it-deflist": "^2.1.0",
+    "markdown-it-emoji": "^2.0.2",
+    "markdown-it-footnote": "^3.0.3",
+    "markdown-it-ins": "^3.0.1",
     "markdown-it-katex-external": "^1.0.0",
-    "markdown-it-mark": "^4.0.0",
-    "markdown-it-sub": "^2.0.0",
-    "markdown-it-sup": "^2.0.0",
+    "markdown-it-mark": "^3.0.1",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
     "markdown-it-task-lists": "^2.1.1",
+    "nprogress": "^0.2.0",
+    "photoswipe": "^5.4.3",
     "recorderx": "^2.0.2",
     "roboto-fontface": "*",
-    "tocbot": "^4.25.0",
+    "tocbot": "^4.18.2",
+    "v3-infinite-loading": "^1.3.1",
+    "vant": "^3.6.12",
     "vue": "^3.2.13",
+    "vue-2-3": "^1.0.0",
     "vue-danmaku": "^1.7.0",
+    "vue-image-swipe": "^1.0.5",
+    "vue-infinite-loading": "^3.0.0-alpha.0-0",
+    "vue-photo-preview": "^1.1.3",
     "vue-router": "^4.0.3",
     "vue3-barrage": "^0.3.2",
+    "vue3-social-share": "^0.1.8",
     "vuetify": "^3.0.0-beta.0",
     "vuex": "^4.0.0",
     "webfontloader": "^1.0.0"
@@ -46,7 +56,6 @@
     "easy-typer-js": "^2.1.0",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
-    "markdown-it": "^13.0.1",
     "sass": "1.32.13",
     "sass-loader": "10.1.1",
     "stylus": "^0.59.0",
