--- a/package.json
+++ b/package.json
@@ -30,13 +30,12 @@
     "markdown-it-task-lists": "^2.1.1",
     "nprogress": "^0.2.0",
     "photoswipe": "^5.4.3",
+    "pinia": "^2.1.7",
     "recorderx": "^2.0.2",
     "roboto-fontface": "*",
     "tocbot": "^4.18.2",
-    "v3-infinite-loading": "^1.3.1",
     "vant": "^3.6.12",
     "vue": "^3.2.13",
-    "vue-2-3": "^1.0.0",
     "vue-danmaku": "^1.7.0",
     "vue-image-swipe": "^1.0.5",
     "vue-infinite-loading": "^3.0.0-alpha.0-0",
@@ -46,6 +45,7 @@
     "vue3-social-share": "^0.1.8",
     "vuetify": "^3.0.0-beta.0",
     "vuex": "^4.0.0",
+    "vuex-persistedstate": "^4.1.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
